Fixing visible responsive nav menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -310,8 +310,9 @@ a {
     width: 100vw;
     height: 100vh;
     margin: 0;
-    z-index: 5;
-    transform: translateY(130%);
+    z-index: 1;
+    opacity: 0;
+    transform: translateY(100%);
   }
 }
 
